--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google Site Verification -->
   <meta name="google-site-verification" content="x7N3ENEDbRI_giPs3uuSaB6FYlrNxieJGAdW7UP78XA" />
+
+  <!-- Basic Meta -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Young Construction — Royal Blue</title>
+  <title>Young Construction | Utah Home Building & Property Development</title>
+  <meta name="description" content="Young Construction is a Utah-based construction firm dedicated to making homeownership accessible through affordable, high-quality craftsmanship and community-driven design across Utah County." />
+  <meta name="keywords" content="Utah construction, Utah home builder, affordable housing, property development, remodeling, Utah County builder, Provo, new homes" />
+  <meta name="author" content="Young Construction" />
+
+  <!-- Open Graph / Social Sharing -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Young Construction — Building Affordable Homes in Utah County" />
+  <meta property="og:description" content="Making homeownership accessible through affordable, high-quality construction and development across Utah County." />
+  <meta property="og:url" content="https://young-construction.netlify.app/" />
+  <meta property="og:image" content="https://young-construction.netlify.app/hero.jpg" />
+  <meta property="og:site_name" content="Young Construction" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Young Construction — Utah Home Building & Property Development" />
+  <meta name="twitter:description" content="Making homeownership accessible with affordable, quality craftsmanship in Utah County." />
+  <meta name="twitter:image" content="https://young-construction.netlify.app/hero.jpg" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="logo.png" type="image/png">
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+
+  <!-- Styles -->
   <style>
     :root{--brand:#1E3A8A;--brand-light:#3B82F6;--ink:#ffffff;--muted:#d1d5db;}
     *{box-sizing:border-box}
@@ -36,18 +63,6 @@
     footer{background:#0b1220;color:#cbd5e1;padding:24px 0}
     img{max-width:100%;height:auto;border-radius:20px;display:block}
     .tight{margin-top:16px;display:flex;gap:12px;flex-wrap:wrap}
-    input, textarea {
-      width: 100%;
-      padding: 10px;
-      border-radius: 10px;
-      border: none;
-      font-family: inherit;
-      font-size: 16px;
-      margin-top: 8px;
-    }
-    input:focus, textarea:focus {
-      outline: 2px solid var(--brand-light);
-    }
   </style>
 </head>
 <body>
